# FAIR-SEA

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.github/workflow/: ci-cd.yml
.github/workflows/: ci-cd.yml
.streamlit/: config.toml
data/: consolidated_prompts.csv
docs/: BENCHMARK.md  TOOLKIT.md
prompts/: Prompts.xlsx  consolidated_prompts.ipynb
src/fairsea/: __main__.py  d1_processing.py  d2_processing.py  d4_processing.py  evaluationTest.py  i1_processing.py  i2_processing.py
streamlit/: app.py  bias_metrics.py  d3_processing.py  i1_processing.py  i2_processing.py  i3_processing.py  i4_processing.py
tests/: test_evaluation.py  test_placeholder.py
