[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fairsea"
version = "0.1.3"
authors = [
  { name="fairsea", email="test@gmail.com" },
]
description = "A toolkit for evaluating socio-cultural bias in LLMs for SEA."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
package-dir = {"" = "src"}